--- a/DBscientist.ipynb
+++ b/DBscientist.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPKsdEC3ysUwtQu5Le6E6jP",
+      "authorship_tag": "ABX9TyObT+t+ir6fyNP9EMA9P9xn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,49 +28,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 21,
       "metadata": {
         "id": "9C6fFcrhixTS",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 218
         },
-        "outputId": "d074fcce-6b51-474c-e002-cf87ac777531"
+        "outputId": "eb692c0c-aa26-4951-a311-7b01466d81b9"
       },
       "outputs": [
         {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "<IPython.core.display.Javascript object>"
-            ],
-            "application/javascript": [
-              "\n",
-              "(async function() {\n",
-              "  const params = new URLSearchParams(window.location.search);\n",
-              "  const icon_id = params.get(\"icon_id\");\n",
-              "  const user_id = params.get(\"user_id\");\n",
-              "  const algorithm = params.get(\"algorithm\") || \"tabnet\";\n",
-              "\n",
-              "  if (!icon_id || !user_id) {\n",
-              "    alert(\"Missing required parameters: icon_id or user_id\");\n",
-              "  }\n",
-              "\n",
-              "  await google.colab.kernel.invokeFunction('notebook.setParams', [icon_id, user_id, algorithm], {});\n",
-              "})();\n"
-            ]
-          },
-          "metadata": {}
-        },
-        {
           "output_type": "error",
           "ename": "Exception",
-          "evalue": "❌ Still missing icon_id or user_id in Colab URL",
+          "evalue": "❌ Missing icon_id or user_id in Colab URL",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-1126667998.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     60\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     61\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0micon_id\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0muser_id\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 62\u001b[0;31m     \u001b[0;32mraise\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"❌ Still missing icon_id or user_id in Colab URL\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     63\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     64\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"📌 icon_id: {icon_id}, user_id: {user_id}, algorithm: {algorithm}\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mException\u001b[0m: ❌ Still missing icon_id or user_id in Colab URL"
+            "\u001b[0;32m/tmp/ipython-input-310606324.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     29\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     30\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0micon_id\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0muser_id\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 31\u001b[0;31m     \u001b[0;32mraise\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"❌ Missing icon_id or user_id in Colab URL\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     32\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     33\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"📌 icon_id: {icon_id}, user_id: {user_id}, algorithm: {algorithm}\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mException\u001b[0m: ❌ Missing icon_id or user_id in Colab URL"
           ]
         }
       ],
@@ -100,43 +76,12 @@
         "import asyncio\n",
         "import time\n",
         "\n",
-        "# Store received params\n",
-        "params_received = {}\n",
-        "\n",
-        "# Python callback to receive JS values\n",
-        "def set_params(icon_id, user_id, algorithm):\n",
-        "    params_received[\"icon_id\"] = icon_id\n",
-        "    params_received[\"user_id\"] = user_id\n",
-        "    params_received[\"algorithm\"] = algorithm\n",
-        "\n",
-        "output.register_callback('notebook.setParams', set_params)\n",
-        "\n",
-        "# JS function to grab URL params and call back into Python\n",
-        "display(Javascript(\"\"\"\n",
-        "(async function() {\n",
-        "  const params = new URLSearchParams(window.location.search);\n",
-        "  const icon_id = params.get(\"icon_id\");\n",
-        "  const user_id = params.get(\"user_id\");\n",
-        "  const algorithm = params.get(\"algorithm\") || \"tabnet\";\n",
-        "\n",
-        "  if (!icon_id || !user_id) {\n",
-        "    alert(\"Missing required parameters: icon_id or user_id\");\n",
-        "  }\n",
-        "\n",
-        "  await google.colab.kernel.invokeFunction('notebook.setParams', [icon_id, user_id, algorithm], {});\n",
-        "})();\n",
-        "\"\"\"))\n",
-        "\n",
-        "# Give the JS callback time to return\n",
-        "time.sleep(2)\n",
-        "\n",
-        "# Retrieve the values\n",
-        "icon_id = params_received.get(\"icon_id\")\n",
-        "user_id = params_received.get(\"user_id\")\n",
-        "algorithm = params_received.get(\"algorithm\", \"tabnet\")\n",
+        "icon_id = output.eval_js(\"new URLSearchParams(window.location.search).get('icon_id')\")\n",
+        "user_id = output.eval_js(\"new URLSearchParams(window.location.search).get('user_id')\")\n",
+        "algorithm = output.eval_js(\"new URLSearchParams(window.location.search).get('algorithm') || 'tabnet'\")\n",
         "\n",
         "if not icon_id or not user_id:\n",
-        "    raise Exception(\"❌ Still missing icon_id or user_id in Colab URL\")\n",
+        "    raise Exception(\"❌ Missing icon_id or user_id in Colab URL\")\n",
         "\n",
         "print(f\"📌 icon_id: {icon_id}, user_id: {user_id}, algorithm: {algorithm}\")\n",
         "\n",
